@@ -25,7 +25,7 @@ Please send bug reports to <bug-par@rt.cpan.org>.
 
 * Copyright
 
-Copyright 2003, 2004, 2006 by Audrey Tang <autrijus@autrijus.org>.
+Copyright 2003-2007 by Audrey Tang <autrijus@autrijus.org>.
 
 All rights reserved.  You can redistribute and/or modify
 this bundle under the same terms as Perl itself.
